--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Noclaf/jkos",
+    "name": "noclaf/jkos",
     "description": "jkos php payment sdk",
     "type": "library",
     "license": "MIT",
