--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "endless640c@gmail.com"
         }
     ],
-    "minimum-stability": "0.0.0",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=5.6"
     },
